Etapa4/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> DEC_LIST_INIT INST_EXE
Rule 2     PROGRAM -> INST_EXE
Rule 3     DEC_LIST_INIT -> TkCreate DEC_LIST
Rule 4     DEC_LIST -> DEC DEC_LIST
Rule 5     DEC_LIST -> DEC
Rule 6     DEC -> TIPO TkBot ID_LIST COMP_LIST TkEnd
Rule 7     TIPO -> TkBool
Rule 8     TIPO -> TkChar
Rule 9     TIPO -> TkInt
Rule 10    ID_LIST -> ID TkComa ID_LIST
Rule 11    ID_LIST -> ID
Rule 12    ID -> TkIdent
Rule 13    COMP_LIST -> COMP COMP_LIST
Rule 14    COMP_LIST -> empty
Rule 15    COMP -> TkOn EXPR TkDosPuntos INST_BOT_LIST TkEnd
Rule 16    COMP -> TkOn STATE TkDosPuntos INST_BOT_LIST TkEnd
Rule 17    STATE -> TkActivation
Rule 18    STATE -> TkDeactivation
Rule 19    STATE -> TkDefault
Rule 20    INST_BOT_LIST -> INST_BOT INST_BOT_LIST
Rule 21    INST_BOT_LIST -> INST_BOT
Rule 22    INST_BOT -> TkStore EXPR TkPunto
Rule 23    INST_BOT -> TkCollect TkPunto
Rule 24    INST_BOT -> TkCollect TkAs ID TkPunto
Rule 25    INST_BOT -> TkDrop EXPR TkPunto
Rule 26    INST_BOT -> DIR TkPunto
Rule 27    INST_BOT -> DIR EXPR TkPunto
Rule 28    INST_BOT -> TkRead TkPunto
Rule 29    INST_BOT -> TkRead TkAs ID TkPunto
Rule 30    INST_BOT -> TkSend TkPunto
Rule 31    DIR -> TkLeft
Rule 32    DIR -> TkRight
Rule 33    DIR -> TkUp
Rule 34    DIR -> TkDown
Rule 35    INST_EXE -> TkExecute INST_CONT_LIST TkEnd
Rule 36    INST_CONT_LIST -> INST_CONT INST_CONT_LIST
Rule 37    INST_CONT_LIST -> INST_CONT
Rule 38    INST_CONT -> TkActivate ID_LIST TkPunto
Rule 39    INST_CONT -> TkAdvance ID_LIST TkPunto
Rule 40    INST_CONT -> TkDeactivate ID_LIST TkPunto
Rule 41    INST_CONT -> TkIf EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
Rule 42    INST_CONT -> TkIf EXPR TkDosPuntos INST_CONT_LIST TkEnd
Rule 43    INST_CONT -> TkWhile EXPR TkDosPuntos INST_CONT_LIST TkEnd
Rule 44    INST_CONT -> PROGRAM
Rule 45    EXPR -> TkNum
Rule 46    EXPR -> TkIdent
Rule 47    EXPR -> TkCaracter
Rule 48    EXPR -> TkMe
Rule 49    EXPR -> TkParAbre EXPR TkParCierra
Rule 50    EXPR -> TkNegacion EXPR
Rule 51    EXPR -> TkResta EXPR
Rule 52    EXPR -> EXPR TkSuma EXPR
Rule 53    EXPR -> EXPR TkResta EXPR
Rule 54    EXPR -> EXPR TkMult EXPR
Rule 55    EXPR -> EXPR TkDiv EXPR
Rule 56    EXPR -> EXPR TkMod EXPR
Rule 57    EXPR -> TkTrue
Rule 58    EXPR -> TkFalse
Rule 59    EXPR -> EXPR TkConjuncion EXPR
Rule 60    EXPR -> EXPR TkDisyuncion EXPR
Rule 61    EXPR -> EXPR TkIgual EXPR
Rule 62    EXPR -> EXPR TkMayor EXPR
Rule 63    EXPR -> EXPR TkMayorIgual EXPR
Rule 64    EXPR -> EXPR TkMenor EXPR
Rule 65    EXPR -> EXPR TkMenorIgual EXPR
Rule 66    EXPR -> EXPR TkDistinto EXPR
Rule 67    empty -> <empty>

Terminals, with rules where they appear

TkActivate           : 38
TkActivation         : 17
TkAdvance            : 39
TkAs                 : 24 29
TkBool               : 7
TkBot                : 6
TkCaracter           : 47
TkChar               : 8
TkCollect            : 23 24
TkComa               : 10
TkConjuncion         : 59
TkCreate             : 3
TkDeactivate         : 40
TkDeactivation       : 18
TkDefault            : 19
TkDistinto           : 66
TkDisyuncion         : 60
TkDiv                : 55
TkDosPuntos          : 15 16 41 41 42 43
TkDown               : 34
TkDrop               : 25
TkElse               : 41
TkEnd                : 6 15 16 35 41 42 43
TkExecute            : 35
TkFalse              : 58
TkIdent              : 12 46
TkIf                 : 41 42
TkIgual              : 61
TkInt                : 9
TkLeft               : 31
TkMayor              : 62
TkMayorIgual         : 63
TkMe                 : 48
TkMenor              : 64
TkMenorIgual         : 65
TkMod                : 56
TkMult               : 54
TkNegacion           : 50
TkNum                : 45
TkOn                 : 15 16
TkParAbre            : 49
TkParCierra          : 49
TkPunto              : 22 23 24 25 26 27 28 29 30 38 39 40
TkRead               : 28 29
TkResta              : 51 53
TkRight              : 32
TkSend               : 30
TkStore              : 22
TkSuma               : 52
TkTrue               : 57
TkUp                 : 33
TkWhile              : 43
error                : 

Nonterminals, with rules where they appear

COMP                 : 13
COMP_LIST            : 6 13
DEC                  : 4 5
DEC_LIST             : 3 4
DEC_LIST_INIT        : 1
DIR                  : 26 27
EXPR                 : 15 22 25 27 41 42 43 49 50 51 52 52 53 53 54 54 55 55 56 56 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66
ID                   : 10 11 24 29
ID_LIST              : 6 10 38 39 40
INST_BOT             : 20 21
INST_BOT_LIST        : 15 16 20
INST_CONT            : 36 37
INST_CONT_LIST       : 35 36 41 41 42 43
INST_EXE             : 1 2
PROGRAM              : 44 0
STATE                : 16
TIPO                 : 6
empty                : 14

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . DEC_LIST_INIT INST_EXE
    (2) PROGRAM -> . INST_EXE
    (3) DEC_LIST_INIT -> . TkCreate DEC_LIST
    (35) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkCreate        shift and go to state 2
    TkExecute       shift and go to state 4

    DEC_LIST_INIT                  shift and go to state 5
    INST_EXE                       shift and go to state 1
    PROGRAM                        shift and go to state 3

state 1

    (2) PROGRAM -> INST_EXE .

    TkActivate      reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkAdvance       reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkDeactivate    reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkIf            reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkWhile         reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkCreate        reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkExecute       reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkEnd           reduce using rule 2 (PROGRAM -> INST_EXE .)
    $end            reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkElse          reduce using rule 2 (PROGRAM -> INST_EXE .)


state 2

    (3) DEC_LIST_INIT -> TkCreate . DEC_LIST
    (4) DEC_LIST -> . DEC DEC_LIST
    (5) DEC_LIST -> . DEC
    (6) DEC -> . TIPO TkBot ID_LIST COMP_LIST TkEnd
    (7) TIPO -> . TkBool
    (8) TIPO -> . TkChar
    (9) TIPO -> . TkInt

    TkBool          shift and go to state 8
    TkChar          shift and go to state 7
    TkInt           shift and go to state 6

    TIPO                           shift and go to state 11
    DEC_LIST                       shift and go to state 9
    DEC                            shift and go to state 10

state 3

    (0) S' -> PROGRAM .



state 4

    (35) INST_EXE -> TkExecute . INST_CONT_LIST TkEnd
    (36) INST_CONT_LIST -> . INST_CONT INST_CONT_LIST
    (37) INST_CONT_LIST -> . INST_CONT
    (38) INST_CONT -> . TkActivate ID_LIST TkPunto
    (39) INST_CONT -> . TkAdvance ID_LIST TkPunto
    (40) INST_CONT -> . TkDeactivate ID_LIST TkPunto
    (41) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
    (42) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (43) INST_CONT -> . TkWhile EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (44) INST_CONT -> . PROGRAM
    (1) PROGRAM -> . DEC_LIST_INIT INST_EXE
    (2) PROGRAM -> . INST_EXE
    (3) DEC_LIST_INIT -> . TkCreate DEC_LIST
    (35) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkActivate      shift and go to state 13
    TkAdvance       shift and go to state 16
    TkDeactivate    shift and go to state 14
    TkIf            shift and go to state 17
    TkWhile         shift and go to state 19
    TkCreate        shift and go to state 2
    TkExecute       shift and go to state 4

    DEC_LIST_INIT                  shift and go to state 5
    PROGRAM                        shift and go to state 15
    INST_EXE                       shift and go to state 1
    INST_CONT                      shift and go to state 18
    INST_CONT_LIST                 shift and go to state 12

state 5

    (1) PROGRAM -> DEC_LIST_INIT . INST_EXE
    (35) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkExecute       shift and go to state 4

    INST_EXE                       shift and go to state 20

state 6

    (9) TIPO -> TkInt .

    TkBot           reduce using rule 9 (TIPO -> TkInt .)


state 7

    (8) TIPO -> TkChar .

    TkBot           reduce using rule 8 (TIPO -> TkChar .)


state 8

    (7) TIPO -> TkBool .

    TkBot           reduce using rule 7 (TIPO -> TkBool .)


state 9

    (3) DEC_LIST_INIT -> TkCreate DEC_LIST .

    TkExecute       reduce using rule 3 (DEC_LIST_INIT -> TkCreate DEC_LIST .)


state 10

    (4) DEC_LIST -> DEC . DEC_LIST
    (5) DEC_LIST -> DEC .
    (4) DEC_LIST -> . DEC DEC_LIST
    (5) DEC_LIST -> . DEC
    (6) DEC -> . TIPO TkBot ID_LIST COMP_LIST TkEnd
    (7) TIPO -> . TkBool
    (8) TIPO -> . TkChar
    (9) TIPO -> . TkInt

    TkExecute       reduce using rule 5 (DEC_LIST -> DEC .)
    TkBool          shift and go to state 8
    TkChar          shift and go to state 7
    TkInt           shift and go to state 6

    TIPO                           shift and go to state 11
    DEC_LIST                       shift and go to state 21
    DEC                            shift and go to state 10

state 11

    (6) DEC -> TIPO . TkBot ID_LIST COMP_LIST TkEnd

    TkBot           shift and go to state 22


state 12

    (35) INST_EXE -> TkExecute INST_CONT_LIST . TkEnd

    TkEnd           shift and go to state 23


state 13

    (38) INST_CONT -> TkActivate . ID_LIST TkPunto
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 25

    ID_LIST                        shift and go to state 24
    ID                             shift and go to state 26

state 14

    (40) INST_CONT -> TkDeactivate . ID_LIST TkPunto
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 25

    ID_LIST                        shift and go to state 27
    ID                             shift and go to state 26

state 15

    (44) INST_CONT -> PROGRAM .

    TkActivate      reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkAdvance       reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkDeactivate    reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkIf            reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkWhile         reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkCreate        reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkExecute       reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkElse          reduce using rule 44 (INST_CONT -> PROGRAM .)
    TkEnd           reduce using rule 44 (INST_CONT -> PROGRAM .)


state 16

    (39) INST_CONT -> TkAdvance . ID_LIST TkPunto
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 25

    ID_LIST                        shift and go to state 28
    ID                             shift and go to state 26

state 17

    (41) INST_CONT -> TkIf . EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
    (42) INST_CONT -> TkIf . EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (45) EXPR -> . TkNum
    (46) EXPR -> . TkIdent
    (47) EXPR -> . TkCaracter
    (48) EXPR -> . TkMe
    (49) EXPR -> . TkParAbre EXPR TkParCierra
    (50) EXPR -> . TkNegacion EXPR
    (51) EXPR -> . TkResta EXPR
    (52) EXPR -> . EXPR TkSuma EXPR
    (53) EXPR -> . EXPR TkResta EXPR
    (54) EXPR -> . EXPR TkMult EXPR
    (55) EXPR -> . EXPR TkDiv EXPR
    (56) EXPR -> . EXPR TkMod EXPR
    (57) EXPR -> . TkTrue
    (58) EXPR -> . TkFalse
    (59) EXPR -> . EXPR TkConjuncion EXPR
    (60) EXPR -> . EXPR TkDisyuncion EXPR
    (61) EXPR -> . EXPR TkIgual EXPR
    (62) EXPR -> . EXPR TkMayor EXPR
    (63) EXPR -> . EXPR TkMayorIgual EXPR
    (64) EXPR -> . EXPR TkMenor EXPR
    (65) EXPR -> . EXPR TkMenorIgual EXPR
    (66) EXPR -> . EXPR TkDistinto EXPR

    TkNum           shift and go to state 35
    TkIdent         shift and go to state 30
    TkCaracter      shift and go to state 33
    TkMe            shift and go to state 31
    TkParAbre       shift and go to state 29
    TkNegacion      shift and go to state 38
    TkResta         shift and go to state 36
    TkTrue          shift and go to state 32
    TkFalse         shift and go to state 37

    EXPR                           shift and go to state 34

state 18

    (36) INST_CONT_LIST -> INST_CONT . INST_CONT_LIST
    (37) INST_CONT_LIST -> INST_CONT .
    (36) INST_CONT_LIST -> . INST_CONT INST_CONT_LIST
    (37) INST_CONT_LIST -> . INST_CONT
    (38) INST_CONT -> . TkActivate ID_LIST TkPunto
    (39) INST_CONT -> . TkAdvance ID_LIST TkPunto
    (40) INST_CONT -> . TkDeactivate ID_LIST TkPunto
    (41) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
    (42) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (43) INST_CONT -> . TkWhile EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (44) INST_CONT -> . PROGRAM
    (1) PROGRAM -> . DEC_LIST_INIT INST_EXE
    (2) PROGRAM -> . INST_EXE
    (3) DEC_LIST_INIT -> . TkCreate DEC_LIST
    (35) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkElse          reduce using rule 37 (INST_CONT_LIST -> INST_CONT .)
    TkEnd           reduce using rule 37 (INST_CONT_LIST -> INST_CONT .)
    TkActivate      shift and go to state 13
    TkAdvance       shift and go to state 16
    TkDeactivate    shift and go to state 14
    TkIf            shift and go to state 17
    TkWhile         shift and go to state 19
    TkCreate        shift and go to state 2
    TkExecute       shift and go to state 4

    DEC_LIST_INIT                  shift and go to state 5
    PROGRAM                        shift and go to state 15
    INST_EXE                       shift and go to state 1
    INST_CONT                      shift and go to state 18
    INST_CONT_LIST                 shift and go to state 39

state 19

    (43) INST_CONT -> TkWhile . EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (45) EXPR -> . TkNum
    (46) EXPR -> . TkIdent
    (47) EXPR -> . TkCaracter
    (48) EXPR -> . TkMe
    (49) EXPR -> . TkParAbre EXPR TkParCierra
    (50) EXPR -> . TkNegacion EXPR
    (51) EXPR -> . TkResta EXPR
    (52) EXPR -> . EXPR TkSuma EXPR
    (53) EXPR -> . EXPR TkResta EXPR
    (54) EXPR -> . EXPR TkMult EXPR
    (55) EXPR -> . EXPR TkDiv EXPR
    (56) EXPR -> . EXPR TkMod EXPR
    (57) EXPR -> . TkTrue
    (58) EXPR -> . TkFalse
    (59) EXPR -> . EXPR TkConjuncion EXPR
    (60) EXPR -> . EXPR TkDisyuncion EXPR
    (61) EXPR -> . EXPR TkIgual EXPR
    (62) EXPR -> . EXPR TkMayor EXPR
    (63) EXPR -> . EXPR TkMayorIgual EXPR
    (64) EXPR -> . EXPR TkMenor EXPR
    (65) EXPR -> . EXPR TkMenorIgual EXPR
    (66) EXPR -> . EXPR TkDistinto EXPR

    TkNum           shift and go to state 35
    TkIdent         shift and go to state 30
    TkCaracter      shift and go to state 33
    TkMe            shift and go to state 31
    TkParAbre       shift and go to state 29
    TkNegacion      shift and go to state 38
    TkResta         shift and go to state 36
    TkTrue          shift and go to state 32
    TkFalse         shift and go to state 37

    EXPR                           shift and go to state 40

state 20

    (1) PROGRAM -> DEC_LIST_INIT INST_EXE .

    TkActivate      reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkAdvance       reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkDeactivate    reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkIf            reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkWhile         reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkCreate        reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkExecute       reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkEnd           reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    $end            reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkElse          reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)


state 21

    (4) DEC_LIST -> DEC DEC_LIST .

    TkExecute       reduce using rule 4 (DEC_LIST -> DEC DEC_LIST .)


state 22

    (6) DEC -> TIPO TkBot . ID_LIST COMP_LIST TkEnd
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 25
